# voxelgame

./: Cargo.toml  README.md  index.html
res/: core.wgsl
src/: egui.rs  lib.rs  main.rs  screen.rs  state.rs  utils.rs
src/game/: mod.rs
src/game/client/: game.rs  mod.rs
src/game/client/screen/: menu_screen.rs  mod.rs  world_screen.rs
src/game/client/world/: mod.rs  player.rs  player_camera.rs
src/game/client/world/chunk/: chunk_mesh.rs
src/game/net/: proto.rs
src/game/screen/: world_screen.rs
src/game/server/: main.rs  network_player.rs  server.rs
src/game/world/: chunk.rs  mod.rs  player_camera.rs
src/game/world/chunk/: chunk.rs  chunk_mesh.rs  chunk_renderer.rs  mod.rs
src/graphics/: atlas.rs  bindable.rs  camera.rs  controller.rs  depth_buffer.rs  mesh.rs  mod.rs  texture.rs  uniform.rs  utils.rs
