[package]
name = "voxelgame"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
bytemuck = "1.9.1"
winit = "0.26.1"
pollster = "0.2.4"
anyhow = "1.0.52"
cgmath = "0.18.0"
euclid = "0.22.7"
env_logger = "0.9"
log = "0.4.14"
wgpu = "0.12.0"
instant = "0.1.12"
rectangle-pack = "0.4.2"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies.imageproc]
version = "0.23.0"
default-features = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "Document", "Window", "Element", "HtmlElement" ]}